Fix minor logo alignment issue.

--- a/css/main.css
+++ b/css/main.css
@@ -223,7 +223,6 @@ table {
 }
 
 .sponsor_logo_td {
-  padding: 15px;
   vertical-align: top;
 }
 
